# obsess

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN-META.md  DESIGN-MULTI.md  DESIGN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
docs/: INTEGRATIONS.md
engram/: __init__.py  bonding.py  cli.py  creator.py  evolution.py  ingest.py  llm.py  memory.py  obsessions.py  pools.py  population.py  relationships.py  retrieve.py  scoring.py  selection.py  shared.py  shares.py  store.py
engram/providers/: __init__.py  anthropic.py  gemini.py  llamacpp.py  ollama.py  openai_compat.py
engram/storage/: __init__.py  memory.py  serialize.py  sqlite.py
examples/: 01_quickstart.py  02_multi_agent_relationships.py  03_team_pool.py  04_persistence.py  05_with_real_llm.py
obsess/: __init__.py  bonding.py  cli.py  creator.py  embed.py  evolution.py  ingest.py  llm.py  memory.py  obsessions.py  pools.py  population.py  relationships.py  retrieve.py  scoring.py  selection.py  shared.py  shares.py  store.py  types.py
obsess/providers/: __init__.py  anthropic.py  gemini.py  llamacpp.py  ollama.py  openai_compat.py
obsess/storage/: __init__.py  memory.py  serialize.py  sqlite.py
tests/: test_bonding.py  test_creator.py  test_evolution.py  test_flow.py  test_llama_cpp.py  test_meta_integration.py  test_obsession_propagation.py  test_persistence.py  test_pools.py  test_propagation.py  test_provider_semantics.py  test_relationships.py  test_selection.py  test_shared_obsessions.py
