[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsess"
version = "0.1.0"
description = "A memory system for LLM multi-agent pipelines. Relationship-shaped memory topology across per-agent minds."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "djwarf", email = "hello@switchsides.co.uk" }]
keywords = ["llm", "memory", "agents", "multi-agent", "ai", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Semantic embeddings via sentence-transformers (nomic-embed etc.). Default
# HashEmbedder works with no deps for tests and prototyping.
embeddings = ["sentence-transformers>=2.7", "einops>=0.7"]

# LLM providers — install only the ones you use.
llamacpp = ["llama-cpp-python>=0.3.0"]
ollama = ["ollama>=0.3.0"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
gemini = ["google-generativeai>=0.8"]

# Convenience bundles
all-providers = [
    "llama-cpp-python>=0.3.0",
    "ollama>=0.3.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
all = [
    "sentence-transformers>=2.7",
    "einops>=0.7",
    "llama-cpp-python>=0.3.0",
    "ollama>=0.3.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]

[project.urls]
Homepage = "https://github.com/djwarf/obsess"
Documentation = "https://github.com/djwarf/obsess#readme"
Issues = "https://github.com/djwarf/obsess/issues"

[project.scripts]
obsess-demo = "obsess.cli:main"

[tool.setuptools.packages.find]
include = ["obsess*"]
exclude = ["tests*", "examples*", "docs*"]
